--- a/startWindow.html
+++ b/startWindow.html
@@ -2,8 +2,12 @@
 <html lang="en">
     <head>
         <title>StreamService</title>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     </head>
     <body>
         <h1>Stream Service</h1>
     </body>
 </html>
+<script>
+
+</script>
