--- a/streamWindow.html
+++ b/streamWindow.html
@@ -8,15 +8,68 @@
         <script src="./node_modules/jquery/dist/jquery.slim.min.js"></script>
     </head>
     <body>
-        <video style="background-color: grey; border: 2px solid black;" src="some_video.mp4" width="1280" height="720" />
-    </body>
-    <script type="text/javascript">
-        $(document).ready(function(){
-            window.addEventListener("gamepadconnected", function (e) {
-                console.log("Gamepad connected at index %d: %s. %d buttons, %d axes.",
-                    e.gamepad.index, e.gamepad.id,
-                    e.gamepad.buttons.length, e.gamepad.axes.length);
+        <video id="stream-video" style="background-color: grey; border: 2px solid black;" src="some_video.mp4" width="1280" height="720" />
+        
+        
+        <script type="text/javascript">
+            const videoTag = $('#stream-video');
+            const streamMediaSource = new MediaSource();
+            const url = URL.createObjectURL(streamMediaSource);
+            videoTag.src = url;
+
+            var playStream = true;
+
+            const audioSourceBuffer = streamMediaSource
+                .addSourceBuffer('audio/mp4; codecs="mp4a.40.2"');
+            const videoSourceBuffer = streamMediaSource
+                .addSourceBuffer('video/mp4; codecs="avc1.64001e"');
+
+
+            $(document).ready(function () {
+                window.addEventListener("gamepadconnected", function (e) {
+                    console.log("Gamepad connected at index %d: %s. %d buttons, %d axes.",
+                        e.gamepad.index, e.gamepad.id,
+                        e.gamepad.buttons.length, e.gamepad.axes.length);
+                });
             });
-        });
-    </script>
+
+            function fetchSegment(url) {
+                return fetch(url).then(function (response) {
+                    return response.arrayBuffer();
+                });
+            }
+
+            function callFetchAudioSegment(cb) {
+                fetchSegement("http://localhost:4000/audio")
+                    .then(function (audioSegment) {
+                        audioSourceBuffer.appendBuffer(audioSegment)
+                    })
+                    .then(function () {
+                        if (playStream) {
+                            return cb(callFetchAudioSegment);
+                        } else {
+                            return;
+                        }
+                    })
+            }
+
+            //callFetchAudioSegment(callFetchAudioSegment);
+
+            function callFetchVideoSegment(cb) {
+                fetchSegement("http://localhost:4000/video")
+                    .then(function (videoSegment) {
+                        videoSourceBuffer.appendBuffer(videoSegment)
+                    })
+                    .then(function () {
+                        if (playStream) {
+                            return cb(callFetchVideoSegment);
+                        } else {
+                            return;
+                        }
+                    })
+            }
+
+            //callFetchVideoSegment(callFetchVideoSegment);
+        </script>
+    </body>
 </html>
